updated hero section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,15 +12,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color:  firebrick;
 }
 
 h1{
     font-family: "Josefin Sans", sans-serif;
+    font-size: 100px;
 }
 
 h2{
     font-family: "Josefin Sans", sans-serif;
     font-weight: 300;
+    font-size: 50px;
 }
 
 p{
@@ -28,31 +31,40 @@ p{
 }
 
 .up{
+    width: max;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px;
+    padding-top: 300px;
+    gap: 10px;
 }
 
 .down{
+    width: 100%;
+    height: 300px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 50px;
+    padding-top: 20px;
+    background-color: white;
 }
 
 .down button{
     padding: 5px;
     font-size: 40px;
+    border: none;
+    font-family: "Josefin Sans", sans-serif;
 }
 
 .hero{
-    width: 250px;
+    width: 220px;
     height: 150px;
-    background-color: dimgrey;
+    background-color: firebrick;
 }
 
 .card{
-    width: 150px;
+    width: 160px;
     height: 200px;
-    background-color: dimgrey;
+    background-color: firebrick;
 }
