--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:  firebrick;
+    background-color:  mediumseagreen;
 }
 
 h1{
@@ -60,11 +60,13 @@ p{
 .hero{
     width: 220px;
     height: 150px;
-    background-color: firebrick;
+    background-color: black;
+    color: white;
 }
 
 .card{
-    width: 160px;
-    height: 200px;
-    background-color: firebrick;
+    width: 220px;
+    height: 150px;
+    background-color: black;
+    color: white;
 }
