--- a/pages/card-gallery/assets/css/style.css
+++ b/pages/card-gallery/assets/css/style.css
@@ -10,6 +10,50 @@
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color:  firebrick;
+    height: fit-content;
+    width: 100vw;
+    overflow-x: hidden;
+    gap: 30px;
+}
+
+.one{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.two{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.three{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.four{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.five{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.static{
+    width: 800px;
+    height: 600px;
+    border: 2px solid black;
+}
+
+.animated{
+    width: 800px;
+    height: 600px;
+    border: 2px solid black;
 }
