--- a/pages/hero-gallery/assets/css/style.css
+++ b/pages/hero-gallery/assets/css/style.css
@@ -17,7 +17,8 @@ body {
 
 h1{
     font-family: "Josefin Sans", sans-serif;
-    font-size: 100px;
+    font-size: 120px;
+    font-weight: 900;
 }
 
 h2{
@@ -28,6 +29,7 @@ h2{
 
 p{
     font-family: "Quicksand", sans-serif;
+    font-size: 30px;
 }
 
 .hero{
@@ -39,11 +41,21 @@ p{
     width: 100%;
     height: 10vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
-.one img{
+button{
+    padding: 5px;
+    margin-left: 10px;
+    font-size: 40px;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 300;
+    height: 10vh;
+    border: none;
+}
+
+.bg{
     position: absolute;
     object-fit: fill;
     z-index: -1;
@@ -52,38 +64,57 @@ p{
     height: 100vh;
 }
 
-.two img{
-    position: absolute;
-    object-fit: fill;
-    z-index: -1;
-    overflow-y: hidden;
-    width: 100%;
-    height: 100vh;
+.one .hero{
+    display: flex;
+    flex-direction: column;
+    gap: 550px;
 }
 
-.three img{
-    position: absolute;
-    object-fit: fill;
-    z-index: -1;
-    overflow-y: hidden;
-    width: 100%;
-    height: 100vh;
+.one .top{
+    padding-top: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    backdrop-filter: blur(2px);
 }
 
-.four img{
-    position: absolute;
-    object-fit: fill;
-    z-index: -1;
-    overflow-y: hidden;
-    width: 100%;
-    height: 100vh;
+.one .bottom{
+    width: max;
+    height: 80px;
+    background-color: rgba(88, 196, 86, 0.5);
+    backdrop-filter: blur(5px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
-.five img{
-    position: absolute;
-    object-fit: fill;
-    z-index: -1;
-    overflow-y: hidden;
-    width: 100%;
-    height: 100vh;
+.one .type{
+    display: flex;
+}
+
+.one h1{
+    color: rgb(41, 62, 41);
+}
+
+.type img{
+    height: 45px;
+    width: 45px;
+}
+
+.cry{
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    backdrop-filter: blur(2px);
+}
+
+.cry h2{
+    color: white;
+}
+
+
+.cry img{
+    height: 40px;
 }
