--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color:  mediumseagreen;
+    background-color: rgb(42, 163, 193);
+    padding: 100px;
 }
 
 h1{
@@ -31,12 +32,15 @@ p{
 }
 
 .up{
-    width: max;
+    padding-top: 100px;
+    background-color: white;
+    width: 1200px;
+    height: 700px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 300px;
     gap: 10px;
+    border: dashed 5px rgb(42, 163, 193);
 }
 
 .down{
@@ -46,7 +50,6 @@ p{
     justify-content: center;
     align-items: center;
     gap: 50px;
-    padding-top: 20px;
     background-color: white;
 }
 
@@ -55,6 +58,14 @@ p{
     font-size: 40px;
     border: none;
     font-family: "Josefin Sans", sans-serif;
+}
+
+.up h1{
+    text-align: center;
+}
+
+.up p{
+    text-align: center;
 }
 
 .hero{
@@ -69,4 +80,11 @@ p{
     height: 150px;
     background-color: black;
     color: white;
+}
+
+.up img{
+        position: absolute;
+        object-fit: fill;
+        overflow-y: hidden;
+        height: 800px;
 }
