--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,7 +45,7 @@ p{
 
 .down{
     width: 100%;
-    height: 300px;
+    height: 220px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,6 +66,7 @@ p{
 
 .up p{
     text-align: center;
+    font-size: 20px;
 }
 
 .hero{
