--- a/pages/card-gallery/assets/css/style.css
+++ b/pages/card-gallery/assets/css/style.css
@@ -7,6 +7,44 @@
     box-sizing: border-box;
 }
 
+h1{
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 120px;
+    font-weight: 900;
+}
+
+h2{
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 300;
+    font-size: 50px;
+}
+
+p{
+    font-family: "Quicksand", sans-serif;
+    font-size: 30px;
+}
+
+
+button{
+    padding: 5px;
+    margin-left: 10px;
+    font-size: 40px;
+    font-family: "Josefin Sans", sans-serif;
+    font-weight: 300;
+    height: 10vh;
+    border: none;
+}
+
+.header{
+    position: fixed;
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: rgb(70, 136, 180);
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -49,11 +87,33 @@ body {
 .static{
     width: 800px;
     height: 600px;
-    border: 2px solid black;
+    border: 10px double rgb(70, 136, 180);
+    padding: 10px;
+    display: flex;
+    flex-direction: columnSS;
+    justify-content: center;
+    align-items: center;
 }
 
 .animated{
     width: 800px;
     height: 600px;
-    border: 2px solid black;
+    border: 10px double rgb(70, 136, 180);
+    padding: 10px;
 }
+
+.one h2{
+    font-size: 120px;
+    color: white;
+}
+
+.bulbapic{
+    height: 500px;
+    width: 700px;
+    background-color: rgb(70, 136, 180);
+}
+
+.bulba{
+    height: 394px;
+}
+
