--- a/pages/card-gallery/assets/css/style.css
+++ b/pages/card-gallery/assets/css/style.css
@@ -154,3 +154,115 @@ body {
     font-size: 70px;
     font-weight: bolder;
 }
+
+.three .third{
+    width: 400px;
+    height: 500px;
+    background-color: black;
+}
+
+.soclogo img{
+    height: 60px;
+}
+
+.socheader{
+    height: 70px;
+    display: flex;
+    background-color: cadetblue;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.socimg img{
+    height: 200x;
+    width: 400px
+}
+
+.socstats{
+    width: 400px;
+    height: 65px;
+    background-color: aliceblue;
+}
+
+.socinfo{
+    width: 400px;
+    height: 140px;
+    background-color: cadetblue;
+}
+
+.socstats{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.socstats img{
+    height:60px;
+}
+
+.socinfo{
+    padding: 5px;
+}
+
+.socinfo h2{
+    font-weight: bolder;
+}
+
+
+.four .classic{
+    width: 600px;
+    height: 400px;
+    background-color: firebrick;
+    border: dashed 5px white;
+    padding: 30px;
+}
+
+.four h1{
+    font-size: 45px;
+}
+
+.four h2{
+    font-size: 30px;
+}
+
+.four p{
+    font-size: 20px;
+}
+
+
+.outline{
+    border: solid 10px rgb(89, 208, 111);
+    background-color: rgb(188, 178, 128);
+    display: flex;
+    height: 400px;
+    width: 600px;
+}
+
+.face{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 71%;
+}
+
+.face img{
+    margin-left: 40px;
+    height: 450px;
+}
+
+.face h2{
+    font-weight: bold;
+}
+
+.amount{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 10%;
+    height:390px;
+}
+
+.amount h2{
+    font-weight: bold;
+}
