updated card designs

--- a/pages/card-gallery/assets/css/style.css
+++ b/pages/card-gallery/assets/css/style.css
@@ -122,6 +122,7 @@ body {
     height: max;
     display: flex;
     background-color: rgb(128, 117, 64);
+    border: double 5px white;
 }
 
 .left{
