--- a/pages/hero-gallery/assets/css/style.css
+++ b/pages/hero-gallery/assets/css/style.css
@@ -104,20 +104,21 @@ button{
 .heroone{
     display: flex;
     flex-direction: column;
-    gap: 550px;
+    align-items: space-evenly;
 }
 
 .one .top{
     padding-top: 50px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
     backdrop-filter: blur(2px);
+    height: 80vh;
 }
 
 .one .bottom{
     width: max;
-    height: 80px;
+    height: 20vh;
     background-color: rgba(88, 196, 86, 0.5);
     backdrop-filter: blur(5px);
     display: flex;
@@ -144,7 +145,6 @@ button{
     display: flex;
     align-items: center;
     gap: 10px;
-    backdrop-filter: blur(2px);
 }
 
 .cry h2{
