--- a/pages/hero-gallery/assets/css/style.css
+++ b/pages/hero-gallery/assets/css/style.css
@@ -303,9 +303,9 @@ button{
 }
 
 .acnhpic img{
-    margin-left: 250px;
+    margin-left: 200px;
     border: solid 5px white;
-    height: 500px;
+    height: 50vh;
 }
 
 .acnhinfo h2{
