updated hero four

--- a/pages/hero-gallery/assets/css/style.css
+++ b/pages/hero-gallery/assets/css/style.css
@@ -310,11 +310,11 @@ button{
 
 .acnhinfo h2{
     font-size: 40px;
-    padding-left: 410px;
+    padding-left: 310px;
 }
 .acnhinfo p{
     font-size: 20px;
-    margin-left: 310px;
+    margin-left: 410px;
     display: flex;
     text-align: end;
     justify-content: flex-start;
@@ -347,6 +347,8 @@ button{
 .seattle h1{
     font-size: 120px;
     color: rgb(16, 60, 85);
+    display: flex;
+    justify-content: center;
 }
 
 .nickname{
@@ -371,11 +373,7 @@ button{
 }
 
 .tourist img{
-    height: 300px;
-}
-
-.sights{
-    margin-top: 150px;
+    height: 30vh;
 }
 
 .tourista{
@@ -389,7 +387,7 @@ button{
 }
 
 .tourista img{
-    height: 300px;
+    height: 30vh;
 }
 
 .tourista:hover{
